@@ -1,6 +1,7 @@
 2010-07-31 Roman Shterenzon <romanbsd@yahoo.com>
 	* Fixed autoconf warnings
 	* Don't append the original query to path when it already has a query (fixes WMP11/12 access)
+	* Fixed several memory leaks in Objective-C wrapper
 
 2010-06-28 Christian Zuckschwerdt <Christian@Zuckschwerdt.org>
 	* Fixed CGUpnpAction::arguments() not to release temporary object.
